update yaml + simple api
